# fan-coldstart-wc2026

./: .gitignore  CITATION.cff  DATA_LICENSES.md  LICENSE  PREREGISTRATION.md  README.md  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements-core.txt  requirements.txt
config/: sources.yaml
data/: google_trends.json  provenance.json  real_results.json  reanalysis.json
docs/: index.html
netlify/functions/: data.mjs
scripts/: build_dashboard.py  collect_real.py  reanalysis.py  run_real.py  run_smoke.py
src/fancoldstart/: __init__.py  cli.py  glm.py  optimize.py  pipeline.py  special.py  stats.py
src/fancoldstart/collect/: __init__.py  bluesky.py  reddit.py  synthetic.py  wikidata.py
src/fancoldstart/eval/: __init__.py  hypotheses.py  report.py  splits.py
src/fancoldstart/graph/: __init__.py  build.py  features.py
src/fancoldstart/models/: __init__.py  bgnbd.py  graph_smoothed.py  inductive.py
tests/: test_bgnbd.py  test_features.py  test_glm.py  test_smoke.py  test_special.py
